Fixed the top social media links still displaying on mobile.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,7 +174,7 @@ form {
 
 /* Mobile phones */
 @media (max-width: 640px) {
-    .address, .socialMediaLinks, .donateNav {
+    .address, .socialMediaTop, .donateNav {
         display: none;
     }
 
